--- a/.github/workflows/findfprj.yml
+++ b/.github/workflows/findfprj.yml
@@ -14,18 +14,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         
-      - name: Install jq
-        run: sudo apt-get install -y jq
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
 
       - name: Find .fprj files
         run: |
           # 递归查找所有.fprj文件
           find . -type f -name "*.fprj" > file_list.txt
+          
+          # 创建JSON数组
           jq -R -s 'split("\n") | map(select(. != ""))' file_list.txt > fprj_files.json
-          echo "Found $(jq -r 'length' fprj_files.json) .fprj files"
+          
+          # 打印文件数量
+          file_count=$(jq -r 'length' fprj_files.json)
+          echo "Found $file_count .fprj files"
 
       - name: Prepare JSON result
         run: |
+          # 创建完整的响应JSON
           jq -n \
             --arg run_id "$GITHUB_RUN_ID" \
             --arg timestamp "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
@@ -39,12 +47,34 @@ jobs:
             }' > result.json
           
           # 打印结果便于调试
+          echo "Generated JSON:"
           cat result.json
 
-      - name: Create result output
+      - name: Set JSON output
         id: set-output
         run: |
-          # 读取JSON内容并设置为输出
-          result=$(cat result.json)
+          # 读取JSON内容并压缩为单行
+          result=$(jq -c . result.json)
+          
+          # 设置输出（正确转义特殊字符）
+          result="${result//$'\n'/}"
+          result="${result//$'\r'/}"
           echo "result=$result" >> $GITHUB_OUTPUT
-          echo "结果已设置为作业输出"
+          echo "JSON输出已设置"
+
+      - name: Upload result as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: fprj-results
+          path: result.json
+          retention-days: 1
+
+      - name: Return results via API
+        if: ${{ secrets.RESULT_API_URL != '' }}
+        run: |
+          API_URL="${{ secrets.RESULT_API_URL }}"
+          
+          # 发送JSON结果
+          curl -X POST "$API_URL" \
+            -H "Content-Type: application/json" \
+            --data-binary "@result.json"
